# Smart-ID-Engine-SDK

./: README.md
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/: readme.txt
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/doc/: README.html  README_ANDROID.md  UPDATE_INSTRUCTIONS.MD  best_practices.html
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/include/idengine/: id_face_feedback.h  id_face_session.h  id_feedback.h  id_file_analysis_session.h  id_file_analysis_session_settings.h  id_video_authentication_result.h
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/include/secommon/: se_serialization.h  se_strings_set.h
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/samples/kotlin_sample/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Android/samples/sample/: build.gradle  gradle.properties
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/data-zip/: bundle_idengine.se
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/doc/: DOCUMENTS_REFERENCE.html  build.txt  gcc_version.txt
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/include/idengine/: id_face_session_settings.h  id_field_processing_session.h  id_result.h  id_session_settings.h  id_video_authentication_session_settings.h
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/include/secommon/: se_exception.h  se_export_defs.h  se_image.h  se_strings_iterator.h
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/samples/idengine_sample/: build_idengine_sample.sh  idengine_sample.cpp
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/samples/idengine_sample_cs/: CMakeLists.txt  IdEngineSampleCs.cs  README.txt  build_csharp_wrapper.sh  idengine_sample_cs_x64.csproj  secommon.i  secommon_defs.i  secommon_include.i
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/samples/idengine_sample_faces/: build_idengine_sample_faces.sh  idengine_sample_faces.cpp
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/samples/idengine_sample_php/: CMakeLists.txt  build_php_wrapper.sh  idengine_sample.php  php.ini  phpidengine.i  phpidengine.stub.php  secommon.i
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Ubuntu18.04/samples/idengine_sample_python/: CMakeLists.txt  README.txt  build_python_wrapper.sh  idengine_sample.py  secommon.i  secommon_defs.i  secommon_include.i
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Win64/: readme.txt
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Win64/data-zip/: bundle_idengine.se
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Win64/doc/: DOCUMENTS_REFERENCE.html  NOTICE.txt  README.html  WHATSNEW.txt  best_practices.html
Smart-ID-Engine-2.5.0-Full-bundle_idengine-Win64/lib/: idengine.lib  jniidengine.lib
Smart-ID-Engine-2.5.0-Full-bundle_idengine-iOS/: readme.txt
Smart-ID-Engine-2.5.0-Full-bundle_idengine-iOS/SESmartID/: SmartID-Bridging-Header.h
Smart-ID-Engine-2.5.0-Full-bundle_idengine-iOS/doc/: SESmartID.html  WHATSNEW.txt
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-MacOS/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-Ubuntu18.04/: readme.txt
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-Ubuntu18.04/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-Ubuntu18.04/doc/: WHATSNEW.txt
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-Win64/: readme.txt
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-Win64/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.6.0-Full-bundle_mock_idengine-iOS/doc/: README.html  build.txt
Smart-ID-Engine-2.6.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/: readme.txt  wasm_notice.txt
Smart-ID-Engine-2.6.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/doc/: DOCUMENTS_REFERENCE.html  README.html  build.txt
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-MacOS/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-MacOS/doc/: best_practices.html  clang_version.txt
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-Ubuntu18.04/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-Ubuntu18.04/doc/: WHATSNEW.txt  ldd_version.txt
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-Win64/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-Win64/doc/: build.txt
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-Win64/lib/: idengine.lib  jniidengine.lib
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-iOS/SESmartID/: SmartID-Bridging-Header.h
Smart-ID-Engine-2.7.0-Full-bundle_mock_idengine-iOS/doc/: NOTICE.txt  README.html  build.txt
Smart-ID-Engine-2.7.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/: wasm_sample_server.py
Smart-ID-Engine-2.7.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/doc/: DOCUMENTS_REFERENCE.html
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Android/data/: bundle_mock_idengine.se
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Android/doc/: DOCUMENTS_REFERENCE.html
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-MacOS/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-MacOS/doc/: macos_version.txt
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Ubuntu18.04/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Ubuntu18.04/doc/: NOTICE.txt  README.html  build.txt
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Win64/data-zip/: bundle_mock_idengine.se
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-Win64/lib/: idengine.lib  jniidengine.lib
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-iOS/SESmartID/: SmartID-Bridging-Header.h
Smart-ID-Engine-2.8.0-Full-bundle_mock_idengine-iOS/doc/: WHATSNEW.txt
Smart-ID-Engine-2.8.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/: wasm_notice.txt  wasm_sample_server.py
Smart-ID-Engine-2.8.0.stripped-Full-bundle_mock_idengine-embedded-dynAct-semock-wasm/doc/: README.html  build.txt
(+1070 files in other folders)
